--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
+            cd drchrono
             python manage.py test
 
       - store_artifacts:
